test_compile.txt
   Compiling sarissa v0.1.0 (/home/minoru/src/github.com/mosuka/sarissa)
error[E0277]: the trait bound `VectorIndexConfig: Default` is not satisfied
  --> tests/hybrid_unification_test.rs:33:11
   |
33 |         ..Default::default()
   |           ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `VectorIndexConfig`

error[E0061]: this function takes 0 arguments but 1 argument was supplied
  --> tests/hybrid_unification_test.rs:42:29
   |
42 |     let embedder = Arc::new(PrecomputedEmbedder::new(3));
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^ - unexpected argument of type `{integer}`
   |
note: associated function defined here
  --> /home/minoru/src/github.com/mosuka/sarissa/src/embedding/precomputed.rs:81:12
   |
81 |     pub fn new() -> Self {
   |            ^^^
help: remove the extra argument
   |
42 -     let embedder = Arc::new(PrecomputedEmbedder::new(3));
42 +     let embedder = Arc::new(PrecomputedEmbedder::new());
   |

error[E0599]: no method named `add` found for struct `Arc<PrecomputedEmbedder>` in the current scope
  --> tests/hybrid_unification_test.rs:43:14
   |
43 |     embedder.add("apple", vec![1.0, 0.0, 0.0]);
   |              ^^^ method not found in `Arc<PrecomputedEmbedder>`

error[E0599]: no method named `add` found for struct `Arc<PrecomputedEmbedder>` in the current scope
  --> tests/hybrid_unification_test.rs:44:14
   |
44 |     embedder.add("banana", vec![0.0, 1.0, 0.0]);
   |              ^^^ method not found in `Arc<PrecomputedEmbedder>`

error[E0061]: this function takes 2 arguments but 3 arguments were supplied
   --> tests/hybrid_unification_test.rs:49:18
    |
 49 |     let engine = VectorEngine::new(config, Arc::new(embedders), storage)?;
    |                  ^^^^^^^^^^^^^^^^^ ------  -------------------  ------- expected `VectorIndexConfig`, found `Arc<MemoryStorage>`
    |                                    |       |
    |                                    |       unexpected argument #2 of type `Arc<HashMap<std::string::String, Arc<dyn Embedder>>>`
    |                                    expected `Arc<(dyn sarissa::storage::Storage + 'static)>`, found `VectorIndexConfig`
    |
note: associated function defined here
   --> /home/minoru/src/github.com/mosuka/sarissa/src/vector/engine.rs:119:12
    |
119 |     pub fn new(storage: Arc<dyn Storage>, config: VectorIndexConfig) -> Result<Self> {
    |            ^^^
help: did you mean
    |
 49 -     let engine = VectorEngine::new(config, Arc::new(embedders), storage)?;
 49 +     let engine = VectorEngine::new(storage, config)?;
    |

error[E0308]: mismatched types
   --> tests/hybrid_unification_test.rs:59:33
    |
 59 |     payload1.set_field("title", PayloadSource::text("apple")); // Uses "apple" for both embedding and lexical
    |              ---------          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Payload`, found `PayloadSource`
    |              |
    |              arguments to this method are incorrect
    |
note: method defined here
   --> /home/minoru/src/github.com/mosuka/sarissa/src/vector/core/document.rs:288:12
    |
288 |     pub fn set_field(&mut self, name: impl Into<String>, payload: Payload) {
    |            ^^^^^^^^^
help: try wrapping the expression in `sarissa::vector::core::document::Payload`
    |
 59 |     payload1.set_field("title", sarissa::vector::core::document::Payload { source: PayloadSource::text("apple") }); // Uses "apple" for both embedding and lexical
    |                                 ++++++++++++++++++++++++++++++++++++++++++++++++++                              +

error[E0308]: mismatched types
   --> tests/hybrid_unification_test.rs:66:33
    |
 66 |     payload2.set_field("title", PayloadSource::text("banana"));
    |              ---------          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `Payload`, found `PayloadSource`
    |              |
    |              arguments to this method are incorrect
    |
note: method defined here
   --> /home/minoru/src/github.com/mosuka/sarissa/src/vector/core/document.rs:288:12
    |
288 |     pub fn set_field(&mut self, name: impl Into<String>, payload: Payload) {
    |            ^^^^^^^^^
help: try wrapping the expression in `sarissa::vector::core::document::Payload`
    |
 66 |     payload2.set_field("title", sarissa::vector::core::document::Payload { source: PayloadSource::text("banana") });
    |                                 ++++++++++++++++++++++++++++++++++++++++++++++++++                               +

error[E0599]: no associated item named `Vector` found for struct `QueryPayload` in the current scope
   --> tests/hybrid_unification_test.rs:76:69
    |
 76 |             vector: sarissa::vector::engine::request::QueryPayload::Vector(vec![0.9, 0.1, 0.0]),
    |                                                                     ^^^^^^ associated item not found in `QueryPayload`
    |
note: if you're trying to build a new `QueryPayload` consider using one of the following associated functions:
      QueryPayload::new
      QueryPayload::with_weight
   --> /home/minoru/src/github.com/mosuka/sarissa/src/vector/engine/request.rs:129:5
    |
129 |     pub fn new(field: impl Into<String>, payload: Payload) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
138 |     pub fn with_weight(field: impl Into<String>, payload: Payload, weight: f32) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `QueryVector: Default` is not satisfied
  --> tests/hybrid_unification_test.rs:77:15
   |
77 |             ..Default::default()
   |               ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `QueryVector`

error[E0599]: no associated item named `Vector` found for struct `QueryPayload` in the current scope
   --> tests/hybrid_unification_test.rs:125:69
    |
125 |             vector: sarissa::vector::engine::request::QueryPayload::Vector(vec![0.9, 0.1, 0.0]),
    |                                                                     ^^^^^^ associated item not found in `QueryPayload`
    |
note: if you're trying to build a new `QueryPayload` consider using one of the following associated functions:
      QueryPayload::new
      QueryPayload::with_weight
   --> /home/minoru/src/github.com/mosuka/sarissa/src/vector/engine/request.rs:129:5
    |
129 |     pub fn new(field: impl Into<String>, payload: Payload) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
138 |     pub fn with_weight(field: impl Into<String>, payload: Payload, weight: f32) -> Self {
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0277]: the trait bound `QueryVector: Default` is not satisfied
   --> tests/hybrid_unification_test.rs:126:15
    |
126 |             ..Default::default()
    |               ^^^^^^^^^^^^^^^^^^ the trait `Default` is not implemented for `QueryVector`

Some errors have detailed explanations: E0061, E0277, E0308, E0599.
For more information about an error, try `rustc --explain E0061`.
error: could not compile `sarissa` (test "hybrid_unification_test") due to 11 previous errors
